fix:System.gc()函数测试